# sort-haskell

./: README.md  sorths.cabal
Relatório/: Ordenação em Haskell.tex
Relatório/Dados/: Dados de tempo.xlsx
input/: inputs
output/: t10000bigrand.txt  t10000equal.txt  t10000sorted.txt  t1000bigrand.txt  t1000equal.txt  t100bigrand.txt  t100equal.txt  t100litrand.txt  t100reverse.txt  t100sorted.txt  t20000bigrand.txt  t20000equal.txt  t20000reverse.txt  t20000sorted.txt
sorths/: array  output  sorths.cabal  test1
sorths/.stack-work/install/x86_64-linux-tinfo6/lts-12.4/8.4.3/flag-cache/: QuickCheck-2.11.3-3XHQpBYb83U2mMvNz2AjQX  clock-0.7.2-Cf9UTsaN2AjEpBnoMpmgkU  primitive-0.6.3.0-DaZpcxwJp2TGn8ITSgfI4C  random-1.1-9LLJAJa4iQFLJiLXBOBXBV  sorths-0.1.0.0  tf-random-0.5-BZa4jMFCdGCK8yjkzN18lQ
sorths/.stack-work/install/x86_64-linux-tinfo6/lts-12.4/8.4.3/lib/x86_64-linux-ghc-8.4.3/clock-0.7.2-Cf9UTsaN2AjEpBnoMpmgkU/System/: Clock.dyn_hi  Clock.hi
sorths/output/: t10000litrand.txt  t10000reverse.txt  t1000bigrand.txt  t1000litrand.txt  t1000reverse.txt  t1000sorted.txt  t100equal.txt  t20000litrand.txt
sorths/src/: Main.hs  Main2.hs  sorting.hs
src/: Main.hs  QuickSortShuffle.hs  Sorting.hs  Validate.hs
